--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,4 +1,5 @@
 /**index.wxss**/
+
 .userinfo {
   display: flex;
   flex-direction: column;
@@ -16,6 +17,6 @@
   color: #aaa;
 }
 
-.usermotto {
-  margin-top: 200px;
+.usermotto, .aliyunoss {
+  margin-top: 100px;
 }
